--- a/notebooks/movie_reccomendation_system.ipynb
+++ b/notebooks/movie_reccomendation_system.ipynb
@@ -52,6 +52,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ratings_data_frame.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ratings_data_frame.printSchema()"
    ]
   },
@@ -70,6 +79,123 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ratings_data_frame = ratings_data_frame.dropna()\n",
+    "ratings_data_frame.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_data_frame.select('userId').distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_data_frame.select('movieId').distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_data_frame.createOrReplaceTempView(\"table1\")\n",
+    "spark_session.sql(\"\"\"\n",
+    "select movieId from table1\n",
+    "group by movieId having count(*) > 10000;\n",
+    "\"\"\").count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_row_list = spark_session.sql(\"\"\"\n",
+    "select movieId from table1\n",
+    "group by movieId having count(*) > 10000;\n",
+    "\"\"\").collect()\n",
+    "\n",
+    "movie_list = [row['movieId'] for row in movie_row_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_data_frame = ratings_data_frame.filter(ratings_data_frame['movieId'].isin(movie_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_data_frame.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark_session.sql(\"\"\"\n",
+    "select userId from table1\n",
+    "group by userId having count(*) > 1000;\n",
+    "\"\"\").count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_row_list = spark_session.sql(\"\"\"\n",
+    "select userId from table1\n",
+    "group by userId having count(*) > 1000;\n",
+    "\"\"\").collect()\n",
+    "\n",
+    "user_list = [row['userId'] for row in user_row_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_data_frame = ratings_data_frame.filter(ratings_data_frame['userId'].isin(user_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings_data_frame.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_data, test_data = ratings_data_frame.randomSplit([0.7, 0.3])"
    ]
   },
@@ -80,7 +206,7 @@
    "outputs": [],
    "source": [
     "from pyspark.ml.recommendation import ALS\n",
-    "model = ALS(maxIter=4, userCol=\"userId\", itemCol=\"movieId\", ratingCol=\"rating\")"
+    "model = ALS(maxIter=10, userCol=\"userId\", itemCol=\"movieId\", ratingCol=\"rating\")"
    ]
   },
   {
@@ -107,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_user_data = test_data.filter(test_data['userId'] == 1)"
+    "test_user_data = test_data.filter(test_data['userId'] == 229)"
    ]
   },
   {
@@ -135,7 +261,7 @@
    "outputs": [],
    "source": [
     "reccomendations = model.transform(single_user)\n",
-    "reccomendations.collect()"
+    "reccomendations.orderBy('movieId').collect()"
    ]
   },
   {
@@ -153,6 +279,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_data.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "test_results = model.transform(test_data)"
    ]
   },
@@ -162,7 +297,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluator = RegressionEvaluator()\n",
+    "test_results.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluator = RegressionEvaluator(labelCol='rating', predictionCol='prediction')\n",
     "print('RMSE')\n",
     "evaluator.evaluate(test_results)"
    ]
@@ -193,8 +337,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_user_data.select('ratings').describe().show()"
+    "test_data.select('rating').describe().show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
